[gd_scene load_steps=10 format=3 uid="uid://cjxf0vt2s21iv"]

[ext_resource type="Script" uid="uid://dc4f15cvukqin" path="res://scenes/level7/level_7.gd" id="1_ovi5q"]
[ext_resource type="PackedScene" uid="uid://cbpfyd55g7y5f" path="res://scenes/resources/background.tscn" id="2_lr3sl"]
[ext_resource type="Texture2D" uid="uid://cd4157pp0hqmv" path="res://Backgrounds/newLevels/background Miami-synth.png" id="3_ec0mh"]
[ext_resource type="PackedScene" uid="uid://cqphseavdiiiy" path="res://scenes/resources/player_start.tscn" id="4_cyp1r"]
[ext_resource type="PackedScene" uid="uid://cbyiwji00befa" path="res://scenes/resources/wall.tscn" id="5_wj5bf"]
[ext_resource type="PackedScene" uid="uid://ukdhlpmvhdf5" path="res://scenes/resources/exit_area.tscn" id="6_t16qh"]
[ext_resource type="PackedScene" uid="uid://ddhmhfc5lmnjl" path="res://scenes/resources/ground.tscn" id="7_waala"]
[ext_resource type="PackedScene" uid="uid://fy7mqh2hvga8" path="res://scenes/spawner/EnemySpawner.tscn" id="9_3yb1q"]
[ext_resource type="PackedScene" uid="uid://dlsww0cob5pm8" path="res://scenes/enemyCar/enemyCar.tscn" id="9_ovi5q"]

[node name="Level7" type="Node2D"]
script = ExtResource("1_ovi5q")

[node name="Background" parent="." instance=ExtResource("2_lr3sl")]
position = Vector2(920, 488.143)
scale = Vector2(1.05052, 1.12751)
texture = ExtResource("3_ec0mh")

[node name="PlayerStart" parent="." instance=ExtResource("4_cyp1r")]
position = Vector2(52, 774)

[node name="StaticBody2D3" parent="." instance=ExtResource("5_wj5bf")]
position = Vector2(20, 713)

[node name="StaticBody2D4" parent="." instance=ExtResource("5_wj5bf")]
position = Vector2(1879, 716)

[node name="ExitArea" parent="." instance=ExtResource("6_t16qh")]
position = Vector2(1871, 848)

[node name="StaticBody2D" parent="." instance=ExtResource("7_waala")]
position = Vector2(956, 922)

[node name="EnemySpawner" parent="." instance=ExtResource("9_3yb1q")]
position = Vector2(429, 468)

[node name="EnemySpawner2" parent="." instance=ExtResource("9_3yb1q")]
position = Vector2(1176, 452)

[node name="EnemySpawner3" parent="." instance=ExtResource("9_3yb1q")]
position = Vector2(1005, 458)

[node name="Car" parent="." instance=ExtResource("9_ovi5q")]
position = Vector2(1692, 861)
